-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: None
-
Component/s: hotspot
-
b14
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8045429 | 8u25 | Vladimir Kozlov | P5 | Resolved | Fixed | b01 |
| JDK-8042572 | 8u20 | Vladimir Kozlov | P5 | Resolved | Fixed | b14 |
| JDK-8053347 | emb-8u26 | Vladimir Kozlov | P5 | Resolved | Fixed | b17 |
Compilation replay currently can't resolve dynamically generated classes recorded in replay file.
There are other parsing problems too which does not affect replayed compilation.
Replay is aborted (not even reaching compilation) if such problems are found.
We should allow to try the compilation even if such problems are found because the compilation may not need that broken information.
There are other parsing problems too which does not affect replayed compilation.
Replay is aborted (not even reaching compilation) if such problems are found.
We should allow to try the compilation even if such problems are found because the compilation may not need that broken information.
- backported by
-
JDK-8042572 Skip replay parsing errors with ReplayIgnoreInitErrors
-
- Resolved
-
-
JDK-8045429 Skip replay parsing errors with ReplayIgnoreInitErrors
-
- Resolved
-
-
JDK-8053347 Skip replay parsing errors with ReplayIgnoreInitErrors
-
- Resolved
-