8041959: Skip replay parsing errors with ReplayIgnoreInitErrors

Allow replay compilation with replay file parsing error.

Reviewed-by: twisti, iveresov